# elmq

./: .dockerignore  .gitignore  .gitmodules  .mcp.json  .mise.toml  .release-please-manifest.json  BENCHMARKS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  HYPOTHESIS.md  LICENSE  README.md  RELEASING.md  ROADMAP.md  benchmark.sh  release-please-config.json
.claude/: settings.json
.claude-plugin/: .mcp.json  marketplace.json  plugin.json
.claude-plugin/hooks/: block-edit-elm.sh  block-read-elm.sh  session-start.sh
.claude/commands/: analyze-benchmarks.md
.claude/hooks/: doc-gate.sh  lib.sh
.github/workflows/: ci.yml  dependabot-automerge.yml  release-please.yml  release.yml
benchmarks/: BENCHMARKS.md  Dockerfile  README.md  analyze.sh  build.sh  elmq-guide.md  run.sh  system-prompt.md
benchmarks/scenarios/01-add-feature/: prompt.md  verify.sh
benchmarks/scenarios/02-rename-module/: prompt.md  verify.sh
npm/darwin-arm64/: package.json
npm/darwin-x64/: package.json
npm/elmq/: package.json  run.js
npm/linux-arm64/: package.json
npm/linux-x64/: package.json
src/: analysis.rs  cli.rs  framing.rs  grep.rs  guide.md  imports.rs  lib.rs  main.rs  mcp.rs  move_decl.rs  parser.rs  project.rs  refs.rs  variant.rs  writer.rs
src/writer/: case_branch.rs  function_arg.rs  let_binding.rs
test-fixtures/: Sample.elm
tests/: expose.rs  get.rs  grep.rs  guide.rs  import.rs  list.rs  mcp.rs  move_decl.rs  mv.rs  patch.rs  refs.rs  rename.rs  rm.rs  set.rs  sub_decl_arg.rs  sub_decl_case.rs  sub_decl_let.rs  variant.rs
(+26 files in other folders)
