[package]
name = "elmq"
version = "0.2.1"
edition = "2024"
description = "Query and edit Elm files — like jq for Elm"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
rmcp = { version = "0.11", features = ["server", "transport-io"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std"] }
tree-sitter = "0.26"
tree-sitter-elm = "5.9"

[dev-dependencies]
tempfile = "3"
