[package]
name = "elmq"
version = "0.5.0"
edition = "2024"
description = "Query and edit Elm files — like jq for Elm"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
ignore = "0.4"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tree-sitter = "0.26"
tree-sitter-elm = "5.9"
walkdir = "2"

[dev-dependencies]
tempfile = "3"
